--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
 			<p>I am a beginner programmer.
 			</p>
 		
-					<h3>Here are some photos of me and my hobbies:
-					</h3>
-			<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
-	    		<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/p417x417/10629599_855948001083040_5782366487825150769_n.jpg?oh=326f5409d182c0b36ffa0c3990dbd975&oe=54CB8724" />
-	    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10653589_855948014416372_3655542989985385533_n.jpg?oh=5259924a56d6816498adb9da4f9ae959&oe=54C44BE6&__gda__=1422580574_a8bb7d9573008c897e78fb7a13cf3b71" />
-			<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/184858_100199563324558_4218904_n.jpg?oh=16103b661d8f78cd509c545796d3f271&oe=54C834C7" />
-			<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/228798_263799086964604_8332851_n.jpg?oh=f56df14059d4e65c84ff5fd1b7af79d2&oe=54B836BE" />
-			<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-frc3/v/t1.0-9/581437_494139080597269_549269819_n.jpg?oh=cf5d8b5b415bbef660d25c02b95c343a&oe=54B12215&__gda__=1421692234_b76d0eb3a1169c3177256d36194edec4" />
-		
+					<h2>Photos of me and my hobbies:
+					</h2>
+	
+	<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
+	<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/p417x417/10629599_855948001083040_5782366487825150769_n.jpg?oh=326f5409d182c0b36ffa0c3990dbd975&oe=54CB8724" />
+	<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10653589_855948014416372_3655542989985385533_n.jpg?oh=5259924a56d6816498adb9da4f9ae959&oe=54C44BE6&__gda__=1422580574_a8bb7d9573008c897e78fb7a13cf3b71" />
+	<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/184858_100199563324558_4218904_n.jpg?oh=16103b661d8f78cd509c545796d3f271&oe=54C834C7" />
+	<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/228798_263799086964604_8332851_n.jpg?oh=f56df14059d4e65c84ff5fd1b7af79d2&oe=54B836BE" />
+	<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-frc3/v/t1.0-9/581437_494139080597269_549269819_n.jpg?oh=cf5d8b5b415bbef660d25c02b95c343a&oe=54B12215&__gda__=1421692234_b76d0eb3a1169c3177256d36194edec4" />
+	
 	</body>
 </html>
