--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 			<p>I am a beginner programmer.
 			</p>
 		
-				<h3>Photos of me and my hobbies:
-				</h3>
+		<h3>Here are photos of me and my hobbies
+		</h3>
+			<p>Perhaps will create a Watercolor Painting Site and offer paintings for sale!!
+			</p>
 			<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
 	    		<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/p417x417/10629599_855948001083040_5782366487825150769_n.jpg?oh=326f5409d182c0b36ffa0c3990dbd975&oe=54CB8724" />
 	    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10653589_855948014416372_3655542989985385533_n.jpg?oh=5259924a56d6816498adb9da4f9ae959&oe=54C44BE6&__gda__=1422580574_a8bb7d9573008c897e78fb7a13cf3b71" />
