--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		
 		<h3>Here are photos of me and my hobbies
 		</h3>
-			<p>Perhaps will create a Watercolor Painting Site and offer paintings for sale!!
+			<p>Perhaps will create a site with pepper info, a site for clowning business, and a site to sell watercolor paintings!
 			</p>
 			<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
 	    		<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/p417x417/10629599_855948001083040_5782366487825150769_n.jpg?oh=326f5409d182c0b36ffa0c3990dbd975&oe=54CB8724" />
