--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<li>Growing Peppers</li>
 			<li>Clowning</li>
 			<li>Watercolor Painting</li>
+			<li>Tuna Fishing</li>
 		</ul>
 	
 
@@ -23,7 +24,7 @@
 	 	</h2>
 		<ol>
 			<li>Remember the Titans</li>
-		      	<li>Despicable Me</li>
+		      	<li>Despicable Me 2</li>
 		      	<li>Jaws</li>
 		</ol>
 
@@ -47,15 +48,28 @@
 			<p>Perhaps will create a site with pepper info, a site for clowning business, and a site to sell watercolor paintings!
 			</p>
 			<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
+	    			<p>
+				</p>
 	    		<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/p417x417/10629599_855948001083040_5782366487825150769_n.jpg?oh=326f5409d182c0b36ffa0c3990dbd975&oe=54CB8724" />
 	    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10653589_855948014416372_3655542989985385533_n.jpg?oh=5259924a56d6816498adb9da4f9ae959&oe=54C44BE6&__gda__=1422580574_a8bb7d9573008c897e78fb7a13cf3b71" />
-			<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/184858_100199563324558_4218904_n.jpg?oh=16103b661d8f78cd509c545796d3f271&oe=54C834C7" />
-						<p>
-						</p>
+				<p>
+				</p>
+			<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/184858_100199563324558_4218904_n.jpg?oh=16103b661d8f78cd509c545796d3f271&oe=54C834C7"/>
+			<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/548512_506587919352385_865104290_n.jpg?oh=4d46e1b30dacb86745e05c7ce462c3ca&oe=54CB81F5&__gda__=1421353497_6b2a7b9df0c7acc560134e7118fc4f81" ?>
+			<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-prn2/v/t1.0-9/254531_506588012685709_1261896492_n.jpg?oh=39e50e085d3d6e86e4f309e97eddd1e5&oe=54BBD2E7&__gda__=1422508721_ab866f09b043137a884157f2004c1006" />
+			<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/485660_506588246019019_1962916981_n.jpg?oh=197973d23f59224dd72633fe0320c833&oe=54B5A4E5&__gda__=1422311988_73251be6375807210e9c029f9fe535e1" />
+			<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-ash2/v/t1.0-9/p417x417/562014_506588512685659_3165312_n.jpg?oh=59f4d788c0a24e05c27723cbfd92156a&oe=54AB4210&__gda__=1421122651_c3b174ac50cfb04b2b92596ae5c92699" />
+				<p>
+				</p>
 			<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/228798_263799086964604_8332851_n.jpg?oh=f56df14059d4e65c84ff5fd1b7af79d2&oe=54B836BE" />
 			<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-frc3/v/t1.0-9/581437_494139080597269_549269819_n.jpg?oh=cf5d8b5b415bbef660d25c02b95c343a&oe=54B12215&__gda__=1421692234_b76d0eb3a1169c3177256d36194edec4" />
 			<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/384342_494138823930628_2047400054_n.jpg?oh=f7b4e3580cadae6ed62158d4fb307193&oe=54B9E9CB" />
 			<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/561490_494139540597223_977788448_n.jpg?oh=476ab384a193c9aa8998c94defbee120&oe=54C4EBC7" />
+				<p>
+				</p>
+			<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/181534_198852216792625_3489265_n.jpg?oh=88df58c52ce3bbee11b0e5b49a8b5f57&oe=54B27B99&__gda__=1420975550_9ab61f476dbd6d0781f74419d82bca82" />
+			<img src="https://scontent-a.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/168609_198852233459290_1604634_n.jpg?oh=8c7be5102e1b812838afd42f9eb60c0e&oe=54C00FFD" />
+	
 	
 	</body>
 </html>
