--- a/profile.html
+++ b/profile.html
@@ -4,8 +4,8 @@
 		<title>Wayne Andersen Pepper Site</title>
 	</head>
 	<body>
-	    <h1 type="color:blue>Wayne C Andersen
-	    </h3>
+	    <h1 type="color:blue">Wayne C Andersen
+	    </h1>
 	    <p>
 	    <img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
 	    </p>
