--- a/profile.html
+++ b/profile.html
@@ -9,14 +9,15 @@
 	    <p>
 	    <img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
 	    </p>
-	    <p>At 52 years old, I am a guy who really enjoys growing peppers.  I live and work in Rancho Bernardo, a community in San Diego, CA. Living in San Diego, there are plenty of sunny days to grow super hot pepper.  I grew up in Omaha, Nebraska, and did not like peppers until I moved to San Diego.  The hottest pepper in the world is a Smokin' Ed's Carolina Reaper, shown in the above photo.
+	    <p>At 52 years old, I am a guy who really enjoys growing peppers.  I live and work in Rancho Bernardo, a community in San Diego, CA. Living in San Diego, there are plenty of sunny days to grow super hot pepper.  I grew up in Omaha, Nebraska, and did not like peppers until I moved to San Diego.
 	    <ul>
 	       <li style="color:blue">Favorite Peppers</li>
 	         <ul>
-	            <li>Smokin' Ed's Carolina Reaper</li>
-	            <li>Chocolate 7-Pot</li>
-	            <li><strong>Butch-T Trinidad Scorpion</strong></li>
-	            <li>Bhut Jolokia</li>
+	            <li>Smokin' Ed's Carolina Reaper - the hottest pepper in the world!</li>
+	            <img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/p417x417/10629599_855948001083040_5782366487825150769_n.jpg?oh=326f5409d182c0b36ffa0c3990dbd975&oe=54CB8724" />
+	    		<li>Chocolate 7-Pot</li>
+	            <li><strong>Butch-T Trinidad Scorpion - hottest pepper a couple years ago</strong></li>
+	            <li>Bhut Jolokia - hottest pepper five or six years ago</li>
 	            <li>Caribbean Red Habanero</li>
 	         </ul>
 	       <li style="color:blue">2014 Pepper Plants (in order of heat level, Scoville Heat Units)</li>
@@ -30,6 +31,7 @@
 	            <li>Datil (30K)</li>
 	            <li>Serrano (20K)</li>
 	            <li>Jalapeno (5K)</li>
+	            <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10653589_855948014416372_3655542989985385533_n.jpg?oh=5259924a56d6816498adb9da4f9ae959&oe=54C44BE6&__gda__=1422580574_a8bb7d9573008c897e78fb7a13cf3b71" />
 	         </ol>
 	       <li style="color:blue">Where to get Pepper Plants</li>
 	         <ul>
