--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 	    <p>
 	    <img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
 	    </p>
-	    <p>At 52 years old, I am a guy who really enjoys growing super hot peppers.  I live and work in Rancho Bernardo, a community in San Diego, CA. Living in San Diego, there are plenty of sunny days to grow hot pepper.  I grew up in Omaha, Nebraska, and did not like eating hot peppers until after moving to San Diego.
+	    <p>At 52 years old, I am a guy who really enjoys growing super hot peppers.  I live and work in Rancho Bernardo, a community in San Diego, CA. Living in San Diego, there are plenty of sunny days to grow hot peppers.  I grew up in Omaha, Nebraska, and did not like eating hot peppers until after moving to San Diego.
 	    <ul>
 	       <li style="color:blue">Favorite Peppers</li>
 	         <ul>
