--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 		<title>Wayne Andersen Pepper Site</title>
 	</head>
 	<body>
-	    <h1 style="color:blue">Wayne Andersen Pepper Profile
+	    <h1>Wayne Andersen Pepper Profile
 	    </h1>
 	    <p>
 	    <img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
@@ -13,7 +13,7 @@
 	    <ul>
 	       <li style="color:blue">Favorite Peppers</li>
 	         <ul>
-	            <li>Smokin' Ed's Carolina Reaper - the <em><scan style="color:red>hottest</scan></em> pepper in the world!</li>
+	            <li>Smokin' Ed's Carolina Reaper - the <strong><em><scan style="color:red; font-size:18px">hottest</scan></em></strong> pepper in the world!</li>
 	            <img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/p417x417/10629599_855948001083040_5782366487825150769_n.jpg?oh=326f5409d182c0b36ffa0c3990dbd975&oe=54CB8724" />
 	    		<li>Chocolate 7-Pot</li>
 	            <li><strong>Butch-T Trinidad Scorpion - hottest pepper a couple years ago</strong></li>
