--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 	    	</h2>
 		<ul>
 			<li>Growing Peppers</li>
-			<li>Clowning</li>
+			<li>Clown Ministry</li>
+			<li>Bible Study</li>
 			<li>Watercolor Painting</li>
 			<li>Tuna Fishing</li>
+
 		</ul>
 	
 
@@ -43,9 +45,9 @@
 			<p>I am a beginner programmer.
 			</p>
 		
-		<h3>Here are photos of me and my hobbies
+		<h3>Here are photos of me and some of my hobbies.
 		</h3>
-			<p>Perhaps will create a site with pepper info, a site for clowning business, and a site to sell watercolor paintings!
+			<p>Perhaps will create a site with pepper info, a site for Clown Ministry, a site for clowning business (magic shows, face painting, glitter tattoos, and balloons), and a site to sell watercolor paintings!
 			</p>
 			<img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/1525298_862649343746239_7323825338328060060_n.jpg?oh=1e5f301b66ca86064d555492c1781d38&oe=54B854C9" />
 	    			<p>
