--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
 	            <li>Smokin' Ed's Carolina Reaper - the <strong><em><scan style="color:red; font-size:18px">hottest</scan></em></strong> pepper in the world!</li>
 	            <img src="https://scontent-a-lax.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/p417x417/10629599_855948001083040_5782366487825150769_n.jpg?oh=326f5409d182c0b36ffa0c3990dbd975&oe=54CB8724" />
 	    		<li>Chocolate 7-Pot</li>
-	            <li><strong>Butch-T Trinidad Scorpion - hottest pepper a couple years ago</strong></li>
+	            <li><strong>Butch-T Trinidad Scorpion - hottest pepper a couple years ago - <scan style="color:purple; font-size:18px">my favorite pepper</scan></strong></li>
 	            <li>Bhut Jolokia - hottest pepper five or six years ago</li>
 	            <li>Caribbean Red Habanero</li>
 	         </ul>
